PLT-5191 - Filter box overlapping fix for IE (#5034)
* PLT-5191 - Filter box overlapping fix for IE

* Updating flex value for direct divs

--- a/webapp/sass/components/_modal.scss
+++ b/webapp/sass/components/_modal.scss
@@ -542,6 +542,10 @@
     display: flex;
     flex-direction: column;
 
+    .browser--ie & {
+        flex: 20;
+    }
+
     > div {
         min-height: 100%;
         overflow: auto;
@@ -638,7 +642,7 @@
     width: 100%;
 
     > div {
-        flex: 1;
+        flex: 1 1 auto;
     }
 
     .more-modal__list {
